@@ -1,4 +1,6 @@
 
+ o new module [Graphml] to export graphs into the graphml format 
+  (contributed by Pietro Abate)
  o Builder.S now contains functions remove_*.
  o modified Fixpoint module so that it also works with unlabeled
    graphs (contributed by Markus W. Weissmann)
